--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -1,3 +1,3 @@
-- id: speeches
-  description: Some of the greatest words ever spoken.
-  image: img/speeches-cover.jpg
+- id: interview
+  description: Interviews with top data analysts.
+  image: img/tag-cover.png
