--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -1,3 +1,10 @@
+- id: Alan Hylands
+  avatar: avatars/profile-pic.jpg
+  bio: Interviewer-in-Chief
+  twitter: alanhylands
+  facebook: alanhylands
+  website: https://alanhylands.com/
+  location: Northern Ireland
 - id: Ghost
   avatar: avatars/ghost.png
   bio: The professional publishing platform
